﻿[UnReleased]

### Added

	- Serilog : log to file
	- Code review for better error handling
	- ERROR_CODES: unhandled exception

### Changed

### Removed

[v1.0.0 - 2019/11/21]

### Added

	- Created API + Controller library
	- Authenticate function
	- BeginOfTransfer functionality
	- UploadFiles functionality
	- EndOfTransfer functionality
	- AbortTransfer functionality
	- EPAIE.REPO.DLL reference
	- Multi tenant authentication with Application ID and Username+Password
	- Check file fingerprint if the fingerprint and algorithm are given

### Changed

### Removed