@@ -6,7 +6,7 @@
   "AppSettings": {
     "VirtualDirectory": "",
     "IdmRestApiUrl": "http://192.168.5.159/idm.api/idm/",
-    "PlatformRestApiUrl": "http://192.168.5.159/platform.api/platform",
+    "PlatformRestApiUrl": "http://192.168.5.121:5000/platform",
     "EpaieRestApiUrl": "http://192.168.5.159/epaie.api/epaie/",
     "UploadFolder": "D:/ARGUS/Data/Hotfolders/Uploads/",
     "A4SBFolderForValidationOrArchiving": "D:/ARGUS/Data/Hotfolders/Uploads/A4SB",
