@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Text;
+
+namespace PUBLIC.CONTROLLER.LIB.Helpers
+{
+    public class ApiKey
+    {
+        public string Key { get; set; }
+        public string Secret { get; set; }
+        public int State { get; set; }
+    }
+}
