@@ -1,9 +1,0 @@
-﻿namespace PUBLIC.CONTROLLER.LIB.Helpers
-{
-    public class Tenant
-    {
-        public string TenantId { get; set; }
-        public string SecretKey { get; set; }
-        public string APIKey { get; set; }
-    }
-}
